2009-02-23 Eitan Adler <eitanadlerlist@gmail.com>
	* doc/man/Makefile.am: Fix make variable substitution to be more portable

2009-02-23 Chris Allegretta <chrisa@asty.org>
	* rcfile.c (parse_keybinding) - Define a var before tryung to use it.  Whoops!
	* fix some redefinitions causing compiler warnings, from Eitan Adler.  Other
	  (hopefully) fixes for uncasted malloc()s, reported by the same.
	* doc/man/fr/Makefile.am: Add groff check fix to fr files.

GNU nano 2.1.9 - 2009.02.16
2009-02-16 Chris Allegretta <chrisa@asty.org>
	* Add new argument to reset_multis for force redraws without attempting to
	  guess whether we need to, for functions that we don't have good info about
	  the text state.  New utility function color.c:reset_multis_for_id().  

2009-02-15 Chris Allegretta <chrisa@asty.org>
	* configure.ac, doc/man/Makefile.am - Add check for HTML output support in GNU
	  groff.  Fixes Savannah bug #24461: build traps on groff.  Also, add installation
	  of html-ized man pages to $datadir/nano/man-html, since we should probably
	  install files we went to all the trouble of generating.

2009-02-14 Chris Allegretta <chrisa@asty.org>
        * nano.c (precalc_multicolorinfo) - Add debugging so we have a better clue if further
          issues arise.   Also start at the beginning of later lines when trying to match the
          end of a multi-line regex.  Fixes more overly aggressive highlighting found by 
          Mike Frysinger.  Finally, advance to the match end for performance.

2009-02-11 Chris Allegretta <chrisa@asty.org>
	* nanorc.c (parse_include): Do call real_dir_from_tilde() on included
	  files in .nanorc, but still avoiding bug #25297.  Fixes ~ and ~user
	  specifications for nanorc include files, as reported by Eitan Adler.

2009-02-09 Chris Allegretta <chrisa@asty.org>
	* New option -q, --quiet, rcfile option "quiet" implemented.  Skips printing
	  errors about the rcfile and asking user to press enter.  Also, nano should