@@ -1,3 +1,8 @@
+2009-02-28 Chris Allegretta <chrisa@asty.org>
+	* configure.ac: Add check for whether _XOPEN_SOURCE_EXTENDED is needed for
+	  curses to work w/color.  Fixes compilation on HP-UX with older GCC, 
+	  reported by jay.krell@cornell.edu.
+
 2009-02-23 Eitan Adler <eitanadlerlist@gmail.com>
 	* doc/man/Makefile.am: Fix make variable substitution to be more portable
 
